--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -568,6 +568,7 @@ fieldset {
     align-self: center;
     /* flex: 1 0 auto; */
 }
+fieldset.unstyled {box-shadow: none;background: inherit;margin: 0;padding: 0;}
 /* If input is not in .form-group */
 fieldset>input, fieldset>select {
     margin: .5rem;
@@ -629,7 +630,7 @@ details[open]>summary::before {content: "\2BC6";padding-right: .5rem}
 
 details>:not(summary) {margin: 1rem}
 summary::-webkit-details-marker {color:#363636;color:var(--color-text-button)}
-details[disabled], details[disabled] summary {color: var(--color-text-muted);pointer-events: none}
+details[disabled], details[disabled], details[inert] summary {color: var(--color-text-muted);pointer-events: none}
 
 
 /* Dialogs */
@@ -934,7 +935,7 @@ aside>div.module{display: flex; flex-direction: column;}
 /* Padding for short description */
 .miniature .infos {padding: 1rem;text-align: justify}
 /* Grow infos, so miniatures are always the same height */
-.miniature, .miniature > .infos, .caption {display: flex;flex-direction: column;flex: 1 0 auto;box-shadow: var(--inputs-shadow);}
+.miniature, .miniature > .infos, .caption {display: flex;flex-direction: column;flex: 1 0 auto;}
 /* Align product names and blog articles titles */
 .miniature h3, .miniature .h3, .rating  {text-align: center;}
 .miniature h3 a {padding: 0.5rem;margin: -0.5rem; text-wrap: balance;}
