--- a/catalog/view/theme/helium/template/common/currency.twig
+++ b/catalog/view/theme/helium/template/common/currency.twig
@@ -1,19 +1,26 @@
 {% if currencies|length > 1 %}
-  <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-currency">
-    <div class="btn-group">
-      <button class="dropdown-toggle" data-toggle="dropdown" type="button">{% for currency in currencies %}
-      {% if currency.symbol_left and currency.code == code %} <strong>{{ currency.symbol_left }}</strong> {% elseif currency.symbol_right and currency.code == code %} <strong>{{ currency.symbol_right }}</strong> {% endif %}
-      {% endfor %} <span class="">{{ text_currency }}</span>&nbsp;<i class="icon-chevron-down"></i></button>
-      <div class="dropdown-menu">
+  <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-currency" >
+      {# <button class="dropdown-toggle" data-toggle="dropdown" type="button">
         {% for currency in currencies %}
-        {% if currency.symbol_left %}
-          <button class="currency-select" type="button" name="{{ currency.code }}">{{ currency.symbol_left }} {{ currency.title }}</button>
-        {% else %}
-          <button class="currency-select" type="button" name="{{ currency.code }}">{{ currency.symbol_right }} {{ currency.title }}</button>
-        {% endif %}
+          {% if currency.symbol_left and currency.code == code %} 
+            <strong>{{ currency.symbol_left }}</strong> 
+          {% elseif currency.symbol_right and currency.code == code %} 
+            <strong>{{ currency.symbol_right }}</strong> 
+          {% endif %}
+        {% endfor %} 
+        <span class="">{{ text_currency }}</span>&nbsp;<i class="icon-chevron-down"></i>
+      </button> #}
+      {# <div class="dropdown-menu"> #}
+        <div class="input-group">
+        {% for currency in currencies %}
+          {% if currency.symbol_left %}
+            <button class="currency-select" type="button" name="{{ currency.code }}"><p class="b">{{ currency.symbol_left }}&nbsp;</p><p class="hidden-md">{{ currency.title }}</p></button>
+          {% else %}
+            <button class="currency-select" type="button" name="{{ currency.code }}"><p class="hidden-md">{{ currency.title }}&nbsp;</p><p class="b">{{ currency.symbol_right }}</p></button>
+          {% endif %}
         {% endfor %}
-      </div>
-    </div>
+        </div>
+      {# </div> #}
     <input type="hidden" name="code" value="" />
     <input type="hidden" name="redirect" value="{{ redirect }}" />
   </form>
