TWIG: Quick checkout rearrange
- If user has saved addresses, custom fields are outside of address form, so required fields are not hidden
- Comply with reworked collapseElement() and uncollapseElement() in JS

--- a/catalog/view/theme/helium/template/account/user_addresses.twig
+++ b/catalog/view/theme/helium/template/account/user_addresses.twig
@@ -2,12 +2,7 @@
   <legend>{{ text_your_addresses }}</legend>
   {% for address in addresses %}
     <div class="form-control">
-      <input 
-        data-collapse-target="{{ form_name }}_form" 
-        role="radio" type="radio" 
-        name="address_id" 
-        id="{{ form_name }}_{{ address.address_id }}" 
-        value="{{ address.address_id }}" 
+      <input data-collapse-target="{{ form_name }}_form" role="radio" type="radio" name="address_id" id="{{ form_name }}_{{ address.address_id }}" value="{{ address.address_id }}" 
         {% if address.address_id == address_id %} 
           checked="checked" 
         {% endif %}
@@ -23,8 +18,7 @@
   {% endfor %}
   <div class="form-control">
     {# Empty value to toggle address form #}
-    <input data-collapse-target="{{ form_name }}_form" role="radio" type="radio" name="address_id" id="{{ form_name }}_0" value="" {% if not address_id %} checked="checked" {% endif %}/>
+    <input data-collapse-target="{{ form_name }}_form" role="radio" type="radio" name="address_id" id="{{ form_name }}_0" value="0" {% if not address_id %} checked="checked" {% endif %}/>
     <label for="{{ form_name }}_0"><b>{{ text_i_want_new_address }}</b></label>
   </div>
-  
 </fieldset>
