--- a/catalog/view/theme/helium/template/information/contact_form.twig
+++ b/catalog/view/theme/helium/template/information/contact_form.twig
@@ -1,44 +1,16 @@
 <form action="{{ action }}" method="post" enctype="multipart/form-data" >
-<fieldset>
-  <legend>{{ text_contact }}</legend>
-  <div class="form-group required">
-    <label for="input-name">{{ entry_name }}</label>
-    <div class="col-sm-10">
-      <input type="text" name="name" value="{{ name }}" id="input-name" />
-      {% if error_name %}
-      <span class="text-danger">{{ error_name }}</div>
-      {% endif %}
+  <fieldset>
+    <legend>{{ text_contact }}</legend>
+    {% include 'helium/template/common/fields/firstname.twig' with {required: true, type: 'contact'} %}
+    {% include 'helium/template/common/fields/email.twig'     with {required: true, type: 'contact'} %}
+    <div class="form-group required {% if error_enquiry %} has-error {% endif %}">
+      <label for="input-enquiry">{{ entry_enquiry }}</label>
+        <textarea name="enquiry" rows="10" id="input-enquiry" class="form-control">{{ enquiry }}</textarea>
+        {% if error_enquiry %}
+        <span role="alert" class="text-danger">{{ error_enquiry }}</span>
+        {% endif %}
     </div>
-  </div>
-  <div class="form-group required">
-    <label for="input-email">{{ entry_email }}</label>
-    <input
-      type="email"
-      name="email"
-      value="{{ email }}"
-      placeholder="{{ entry_email }}"
-      id="input-email"
-      inputmode="email"
-      enterkeyhint="next"
-    />
-    {% if error_email %}
-      <span class="text-danger">{{ error_email }}</div>
-    {% endif %} 
-  </div>
-  <div class="form-group required">
-    <label for="input-enquiry">{{ entry_enquiry }}</label>
-    <div class="col-sm-10">
-      <textarea name="enquiry" rows="10" id="input-enquiry" class="form-control">{{ enquiry }}</textarea>
-      {% if error_enquiry %}
-      <span class="text-danger">{{ error_enquiry }}</div>
-      {% endif %}
-    </div>
-  </div>
-  {{ captcha }}
-</fieldset>
-<div class="buttons">
-  <div class="pull-right">
-    <input type="submit" class="primary"  value="{{ button_submit }}" />
-  </div>
-</div>
+    {{ captcha }}
+  </fieldset>
+  <input type="submit" class="primary"  value="{{ button_submit }}" />
 </form>
