--- a/catalog/view/theme/helium/template/common/cart_button.twig
+++ b/catalog/view/theme/helium/template/common/cart_button.twig
@@ -1,5 +1,5 @@
 <div  class="cart-header-button" >
-  <button data-action="cartShowModal" id="cart-header-button" type="button" class="primary" aria-label="{{ text_cart }}">
+  <button data-action="cartShowModal" id="cart-header-button" type="button" class="primary" aria-label="{{ text_cart }}" aria-haspopup="dialog">
   <i class="icon-cart"></i>
   <span class="cart_title">{{ total_cart }}</span>
   <span class="product-count c_count">{{ product_count }}</span>
