TWIG: Minor markup fixes in fields

--- a/catalog/view/theme/helium/template/common/fields/telephone.twig
+++ b/catalog/view/theme/helium/template/common/fields/telephone.twig
@@ -7,7 +7,7 @@
     placeholder="{{ entry_telephone }}"
     id="input-{{ type }}-telephone"
     inputmode="tel"
-    enterkeyhint="send"
+    enterkeyhint="next"
     minlength="3" maxlength="32"
     autocomplete="tel"
   />
