--- a/catalog/view/theme/helium/template/common/fields/password.twig
+++ b/catalog/view/theme/helium/template/common/fields/password.twig
@@ -6,7 +6,7 @@
       <a class="button" href="{{ forgotten }}">{{ text_forgotten }}</a>
     </div>
     {% if error_warning %}
-      <span role="alert" class="text-danger">{{ error_warning }}</div>
+      <span role="alert" class="text-danger">{{ error_warning }}</span>
     {% endif %}
   </div>
 {% endif %}
@@ -15,7 +15,7 @@
     <label for="input-password">{{ entry_password }}</label>
     <input type="password" name="password" value="" placeholder="{{ entry_password }}" id="input-password" autocomplete="new-password">
     {% if error_password %}
-      <span role="alert" class="text-danger">{{ error_password }}</div>
+      <span role="alert" class="text-danger">{{ error_password }}</span>
     {% endif %}
   </div>
   <div class="form-group required {% if error_confirm %} has-error {% endif %}">
