--- a/catalog/view/theme/helium/template/account/login.twig
+++ b/catalog/view/theme/helium/template/account/login.twig
@@ -2,42 +2,33 @@
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="account-login">
   {% if success %}
-  <div role="alert" class="alert-success"><i class="icon-info"></i> {{ success }}</div>
+    <span role="alert" class="alert-success"><i class="icon-info"></i> {{ success }}</span>
   {% endif %}
   {% if error_warning %}
-  <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
+    <span role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</span>
   {% endif %}
   {{ content_top }}
-  <div class="row">
-    <div>
-        <h2>{{ text_new_customer }}</h2>
-        <p><strong>{{ text_register }}</strong></p>
-        <p>{{ text_register_account }}</p>
-        <a href="{{ register }}" class="button primary">{{ button_continue }}</a>
-    </div>
+  <div>
+      <h2>{{ text_new_customer }}</h2>
+      <p>{{ text_register }}</p>
+      <p>{{ text_register_account }}</p>
+      <a href="{{ register }}" class="button primary">{{ button_continue }}</a>
+  </div>
     <br/>
     <div>
       <h2>{{ text_returning_customer }}</h2>
-      <p><strong>{{ text_i_am_returning_customer }}</strong></p>
+      <p>{{ text_i_am_returning_customer }}</p>
       <form action="{{ action }}" method="post" enctype="multipart/form-data">
-        <div class="form-group">
-          <label for="input-email">{{ entry_email }}</label>
-          <input type="email" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" />
-        </div>
-        <div class="form-group">
-          <label for="input-password">{{ entry_password }}</label>
-          <div class="inline-group">
-            <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
-            <a class="button" href="{{ forgotten }}">{{ text_forgotten }}</a>
-          </div>
-        </div>
-        <button type="submit" class="primary">{{ button_login }}</button>
+        <fieldset class="unstyled">
+          {% include 'helium/template/common/fields/email.twig'     with {required: true, type: 'login'} %}
+          {% include 'helium/template/common/fields/password.twig' with {current_password: true} %}
+          <button type="submit" class="primary">{{ button_login }}</button>
+        </fieldset>
         {% if redirect %}
           <input type="hidden" name="redirect" value="{{ redirect }}" />
         {% endif %}
       </form>
     </div>
-  </div>
   {{ content_bottom }}
 </main>
 {{ column_left }}
