--- a/catalog/view/theme/helium/template/account/order_info.twig
+++ b/catalog/view/theme/helium/template/account/order_info.twig
@@ -3,12 +3,12 @@
 <main role="main" id="account-order">
   {% if success %}
   <div role="alert" class="alert-success"><i class="icon-info"></i> {{ success }}
-    <button type="button" class="close">&times;</button>
+    <button type="button" class="close"></button>
   </div>
   {% endif %}
   {% if error_warning %}
   <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}
-    <button type="button" class="close">&times;</button>
+    <button type="button" class="close"></button>
   </div>
   {% endif %}
   
@@ -81,7 +81,16 @@
                 <a href="{{ product.reorder }}" title="{{ button_reorder }}" class="primary">
                   <i class="icon-cart"></i>
                 </a>
-              {% endif %} 
+              {% endif %}
+              <button 
+                type="button" 
+                data-id="{{product.product_id}}" 
+                data-type="product/product" 
+                aria-haspopup="dialog" 
+                data-action="reviewModal"
+              >
+                <i class="icon-edit"></i>
+              </button>
               <a href="{{ product.return }}" title="{{ button_return }}" class="button">
                 <i class="icon-reply"></i>
               </a>
