--- a/catalog/view/theme/helium/template/account/return_form.twig
+++ b/catalog/view/theme/helium/template/account/return_form.twig
@@ -1,198 +1,125 @@
 {{ header }}
+{% include 'helium/template/common/breadcrumbs.twig' %}
+{{ column_left }}
 <main role="main" id="account-return">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}"> {{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
   {% if error_warning %}
-  <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
+    <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
-  <div class="row"> {{ column_left }}
+  {{ content_top }}
 
-    <, id="content"> {{ content_top }}
-      <h1>{{ heading_title }}</h1>
-      <p>{{ text_description }}</p>
-      <form action="{{ action }}" method="post" enctype="multipart/form-data" >
-        <fieldset>
-          <legend>{{ text_order }}</legend>
-          
-          <div class="form-group required">
-            <label for="input-firstname">{{ entry_firstname }}</label>        
-            <input
-              type="text"
-              name="firstname"
-              value="{{ firstname }}"
-              placeholder="{{ entry_firstname }}"
-              id="input-firstname"
-              inputmode="text"
-              enterkeyhint="next"
-              autocapitalize="words"
-              minlength="3" maxlength="32"
-            />
-            {% if error_firstname %}
-              <span class="text-danger">{{ error_firstname }}</div>
-            {% endif %}
-          </div>
+  <h1>{{ heading_title }}</h1>
+  <p>{{ text_description }}</p>
+  <form action="{{ action }}" method="post" enctype="multipart/form-data" >
+    <fieldset>
+      <legend>{{ text_order }}</legend>
+      {% include 'helium/template/common/fields/email.twig'     with {required: true,  type: 'return'} %}
+      {% include 'helium/template/common/fields/telephone.twig'   with {required: true, type: 'return'} %}
+    </fieldset>
+    
+    <fieldset>
+      <legend>{{ text_product }}</legend>
+      {# Order list #}
+      <div class="form-group required">
+        <label for="customer_orders">{{ entry_order_id }}</label>
+        <select name="order_id" data-action="getOrderProductsList" id="customer_orders">
+          {% for order in orders %}
+            <option value="{{order.order_id}}" {% if order.selected %} selected {% endif %}> #{{order.order_id}}, <b>{{order.firstname}} {{order.lastname}}, {{order.total}}, {{order.date_added_format }}</option>
+          {% endfor %}
+        </select>
+      </div>
 
-          <div class="form-group required">
-            <label for="input-lastname">{{ entry_lastname }}</label>
-            <input
-              type="text"
-              name="lastname"
-              value="{{ lastname }}"
-              placeholder="{{ entry_lastname }}"
-              id="input-lastname"
-              inputmode="text"
-              enterkeyhint="next"
-              autocapitalize="words"
-              minlength="3" maxlength="32"
-            />
-            {% if error_lastname %}
-              <span class="text-danger">{{ error_lastname }}</div>
-            {% endif %}
-          </div>
+      {# Product list #}
+        <div class="form-group required {% if error_product %} has-error {% endif %}">
+          <label for="customer_order_products">{{ entry_product }}</label>
+        <select name="product_id" id="customer_order_products">
+          {% for product in products %}
+            <option value="{{ product.product_id }}" {% if product.selected %} selected {% endif %}>{{ product.name }} ({{product.model}}) &times; {{product.quantity}}</option>
+          {% endfor %}
+        </select>
+        {% if error_product %}
+          <span role="alert" class="text-danger">{{ error_product }}</span>
+        {% endif %}
+      </div>
 
-          <div class="form-group required">
-            <label for="input-email">{{ entry_email }}</label>
-            <input
-              type="email"
-              name="email"
-              value="{{ email }}"
-              placeholder="{{ entry_email }}"
-              id="input-email"
-              inputmode="email"
-              enterkeyhint="next"
-            />
-            {% if error_email %}
-              <span class="text-danger">{{ error_email }}</div>
-            {% endif %} 
-          </div>
+      <div class="form-group {% if error_quantity %} has-error {% endif %}">
+        <label for="input-quantity">{{ entry_quantity }}</label>
+        <input type="number" name="quantity" value="{{ quantity }}" placeholder="{{ entry_quantity }}" id="input-quantity" min="1" />
+        {% if error_quantity %}
+          <span role="alert" class="text-danger"> {{ error_quantity }}</span>
+        {% endif %}
+      </div>
 
-          <div class="form-group required">
-            <label for="input-telephone">{{ entry_telephone }}</label>
-            <input
-              type="tel"
-              name="telephone"
-              value="{{ telephone }}"
-              placeholder="{{ entry_telephone }}"
-              id="input-telephone"
-              inputmode="tel"
-              enterkeyhint="next"
-              minlength="3" maxlength="32"
-            />
-            {% if error_telephone %}
-              <span class="text-danger">{{ error_telephone }}</div>
-            {% endif %} 
-          </div>
-
-          <div class="form-group required">
-            <input type="text" name="order_id" value="{{ order_id }}" placeholder="{{ entry_order_id }}" id="input-order-id" />
-            <label for="input-order-id">{{ entry_order_id }}</label>
-            {% if error_order_id %}
-              <span class="text-danger">{{ error_order_id }}</div>
-            {% endif %}
-          </div>
-          <div class="form-group">
-            <label for="input-date-ordered">{{ entry_date_ordered }}</label>
-            <input 
-              type="date" 
-              name="date_ordered" 
-              value="{{ date_ordered }}" 
-              placeholder="{{ entry_date_ordered }}" 
-              data-date-format="YYYY-MM-DD" 
-              id="input-date-ordered"
-              step="1"
-            />
-          </div>
-        </fieldset>
-        <fieldset>
-          <legend>{{ text_product }}</legend>
-          <div class="form-group required">
-            <label for="input-product">{{ entry_product }}</label>
-            <input type="text" name="product" value="{{ product }}" placeholder="{{ entry_product }}" id="input-product" />
-            <input type="hidden" name="product_id" value="{{ product_id }}" />
-            {% if error_product %}
-              <span class="text-danger">{{ error_product }}</div>
-            {% endif %}
-          </div>
-          <div class="form-group required">
-            <label for="input-model">{{ entry_model }}</label>
-              <input type="text" name="model" value="{{ model }}" placeholder="{{ entry_model }}" id="input-model" />
-              {% if error_model %}
-                <span class="text-danger">{{ error_model }}</div>
-              {% endif %}
-          </div>
-          <div class="form-group">
-            
-            <input type="number" name="quantity" value="{{ quantity }}" placeholder="{{ entry_quantity }}" id="input-quantity" />
-            <label for="input-quantity">{{ entry_quantity }}</label>
-            
-          </div>
-          <div class="form-group required">
-            <legend>{{ entry_reason }}</legend>
-            {% for return_reason in return_reasons %}
-              {% if return_reason.return_reason_id == return_reason_id %}
-                <div class="form-control">
-                  <input type="radio" name="return_reason_id" value="{{ return_reason.return_reason_id }}" checked="checked" />
-                  <label>{{ return_reason.name }}</label>
-                </div>
-              {% else %}
-                <div class="form-control">
-                  <input type="radio" name="return_reason_id" value="{{ return_reason.return_reason_id }}" />
-                  <label>{{ return_reason.name }}</label>
-                </div>
-              {% endif %}
-            {% endfor %}
-            {% if error_reason %}
-              <span class="text-danger">{{ error_reason }}</div>
-            {% endif %} 
-          </div>
-          <div class="form-group required">
-            <legend>{{ entry_opened }}</legend>
-            {% if opened %}
-              <input type="radio" name="opened" value="1" checked="checked" />
-              <label>{{ text_yes }}</label>
-            {% else %}
-              <input type="radio" name="opened" value="1" />
-              <label>{{ text_yes }}</label>
-            {% endif %}
-            {% if not opened %}
-              <input type="radio" name="opened" value="0" checked="checked" />
-              <label>{{ text_no }}</label>
-            {% else %}
-              <input type="radio" name="opened" value="0" />
-              <label>{{ text_no }}</label>
-            {% endif %}
-          </div>
-          <div class="form-group">
-            <label for="input-comment">{{ entry_fault_detail }}</label>
-            
-            <textarea name="comment" rows="10" placeholder="{{ entry_fault_detail }}" id="input-comment" class="form-control">{{ comment }}</textarea>
-            
-          </div>
-          {{ captcha }}
-        </fieldset>
-        {% if text_agree %}
+      {# Return reasons #}
+      <div class="{% if error_reason %} has-error {% endif %}">
+        <span class="h4">{{ entry_reason }}</span>
+        {% for return_reason in return_reasons %}
           <div class="form-control">
-            {% if agree %}
-              <input type="checkbox" name="agree" value="1" checked="checked" />
-              <label for="agree_with_terms">{{ text_agree }}</label>
-            {% else %}
-              <input type="checkbox" name="agree" value="1" />
-              <label for="agree_with_terms">{{ text_agree }}</label>
-            {% endif %}
-            <button type="submit" class="primary">{{ button_continue }}</button>
+            <input id="return_reason_{{ return_reason.return_reason_id }}" type="radio" name="return_reason_id" value="{{ return_reason.return_reason_id }}" {% if return_reason.return_reason_id == return_reason_id %} checked="checked" {% endif %}/>
+            <label for="return_reason_{{ return_reason.return_reason_id }}">{{ return_reason.name }}</label>
+          </div>
+        {% endfor %}
+        {% if error_reason %}
+          <span role="alert" class="text-danger">{{ error_reason }}</span>
+        {% endif %} 
+      </div>
+      {# Box opened or not #}
+      <div class="form-group required">
+        <span class="h4">{{ entry_opened }}</span>
+        {% if opened %}
+          <div class="form-control">
+            <input type="radio" name="opened" value="1" checked="checked" />
+            <label>{{ text_yes }}</label>
           </div>
         {% else %}
-        <div class="buttons clearfix">
-          <div class="pull-left"><a href="{{ back }}" class="default">{{ button_back }}</a></div>
-          <div class="pull-right">
-            <button type="submit" class="primary">{{ button_submit }}</button>
+          <div class="form-control">
+            <input type="radio" name="opened" value="1" />
+            <label>{{ text_yes }}</label>
           </div>
-        </div>
         {% endif %}
-      </form>
+        {% if not opened %}
+          <div class="form-control">
+            <input type="radio" name="opened" value="0" checked="checked" />
+            <label>{{ text_no }}</label>
+          </div>
+        {% else %}
+            <div class="form-control">
+              <input type="radio" name="opened" value="0" />
+              <label>{{ text_no }}</label>
+            </div>
+        {% endif %}
+      </div>
+      {# User comment #}
+      <div class="form-group {% if error_comment %} has-error {% endif %}">
+        <label for="input-comment">{{ entry_fault_detail }}</label>
+        <textarea name="comment" rows="10" placeholder="{{ entry_fault_detail }}" id="input-comment" class="form-control">{{ comment }}</textarea>
+        {% if error_comment %}
+          <span role="alert" class="text-danger">{{ error_comment }} </span>
+        {% endif %}
+      </div>
+      {{ captcha }}
+    </fieldset>
+
+    {% if text_agree %}
+      <div class="form-control">
+        {% if agree %}
+          <input type="checkbox" name="agree" value="1" checked="checked" />
+          <label for="agree_with_terms">{{ text_agree }}</label>
+        {% else %}
+          <input type="checkbox" name="agree" value="1" />
+          <label for="agree_with_terms">{{ text_agree }}</label>
+        {% endif %}
+        <div class="btn-group">
+          <a href="{{ back }}" class="button">{{ button_back }}</a>
+          <button type="submit" class="primary">{{ button_submit }}</button>
+        </div>
+      </div>
+    {% else %}
+      <div class="btn-group">
+        <a href="{{ back }}" class="button">{{ button_back }}</a>
+        <button type="submit" class="primary">{{ button_submit }}</button>
+      </div>
+    {% endif %}
+  </form>
 </main>
 {{ content_bottom }}
 {{ column_right }}
