--- a/catalog/view/theme/helium/template/extension/total/shipping.twig
+++ b/catalog/view/theme/helium/template/extension/total/shipping.twig
@@ -55,7 +55,7 @@
 
 					if (json['error']) {
 						if (json['error']['warning']) {
-							$('.breadcrumb').after('<div role="alert" class="alert-danger"><i class="icon-alert"></i> ' + json['error']['warning'] + '<button type="button" class="close">&times;</button></div>');
+							$('.breadcrumb').after('<div role="alert" class="alert-danger"><i class="icon-alert"></i> ' + json['error']['warning'] + '<button type="button" class="close"></button></div>');
 
 							$('html, body').animate({ scrollTop: 0 }, 'slow');
 						}
@@ -151,7 +151,7 @@
 					$('.alert-dismissible').remove();
 
 					if (json['error']) {
-						$('.breadcrumb').after('<div role="alert" class="alert-danger"><i class="icon-alert"></i> ' + json['error'] + '<button type="button" class="close">&times;</button></div>');
+						$('.breadcrumb').after('<div role="alert" class="alert-danger"><i class="icon-alert"></i> ' + json['error'] + '<button type="button" class="close"></button></div>');
 
 						$('html, body').animate({ scrollTop: 0 }, 'slow');
 					}
