--- a/catalog/view/theme/helium/template/extension/total/voucher.twig
+++ b/catalog/view/theme/helium/template/extension/total/voucher.twig
@@ -38,7 +38,7 @@
 // 			$('.alert-dismissible').remove();
 			
 // 			if (json['error']) {
-// 				$('.breadcrumb').after('<div role="alert" class="alert-danger"><i class="icon-alert"></i> ' + json['error'] + '<button type="button" class="close">&times;</button></div>');
+// 				$('.breadcrumb').after('<div role="alert" class="alert-danger"><i class="icon-alert"></i> ' + json['error'] + '<button type="button" class="close"></button></div>');
 				
 // 				$('html, body').animate({ scrollTop: 0 }, 'slow');
 // 			}
